# websockets-actions

./: .gitignore  README.md  licenses  pyproject.toml
docs/ru/docs/examples/: chat.md  index.md
tests/: test_websockets_actions.py
websockets_actions/: actions.py  manager.py
websockets_actions/fastapi/: actions.py  endpoints.py
websockets_actions/starlette/: actions.py  mixin.py
