[tool.poetry]
name = "websocketsactions"
version = "0.1.0"
description = ""
authors = ["Omelchenko Michael <socanime@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.20.4"
uvicorn = {extras = ["standart"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
