[tool.poetry]
name = "websockets-actions"
version = "0.3.0"
description = "Using Actions for Websockets"
readme = "README.md"
authors = ["Omelchenko Michael <socanime@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/DJWOMS/websockets-actions"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
]


[tool.poetry.dependencies]
python = "^3.10"

[project.optional-dependencies]
starlette = [
    "starlette>=0.20.4",
    "uvicorn>=0.18.3",
    "websockets>=10.3"
]
fastapi = [
    "fastapi>=0.81.0",
    "uvicorn>=0.18.3",
    "websockets>=10.3"
]


[tool.poetry.dev-dependencies]
mkdocs-material = "^8.4.2"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
